@@ -5634,7 +5634,6 @@ pnpoly(int *out, int nvert, dbl *vx, dbl *vy, bat *point_x, bat *point_y)
 	}
 
 	BATsetcount(bo, cnt);
-	BATderiveProps(bo, FALSE);
 	BBPunfix(bpx->batCacheid);
 	BBPunfix(bpy->batCacheid);
 	BBPkeepref(*out = bo->batCacheid);
@@ -5721,7 +5720,6 @@ pnpolyWithHoles(bat *out, int nvert, dbl *vx, dbl *vy, int nholes, dbl **hx, dbl
 		*cs++ = wn & 1;
 	}
 	BATsetcount(bo, cnt);
-	BATderiveProps(bo, FALSE);
 	BBPunfix(bpx->batCacheid);
 	BBPunfix(bpy->batCacheid);
 	BBPkeepref(*out = bo->batCacheid);
