@@ -83,7 +83,6 @@ MATpackInternal(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr p)
 	}
 	assert(!bn->tnil || !bn->tnonil);
 	BATsettrivprop(bn);
-	BATderiveProps(bn,FALSE);
 	BBPkeepref(*ret = bn->batCacheid);
 	return MAL_SUCCEED;
 }
